--- a/.project
+++ b/.project
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BootstrapBookStore</name>
+	<name>BootstrapBookShop</name>
 	<comment></comment>
 	<projects>
-		<project>gson-2.10.1</project>
-		<project>mysql-connector-java-8.0.30</project>
-		<project>jstl-1.2</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
